--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
